2023-10-24T08:16:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6624158459 # 2016
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-24
* notice: last 14d: unq all: 49 149
* notice: prev accum: outdated-unq outdated-all / unq all: 1273 3094 / 1351 3250
* notice: next accum: outdated-unq outdated-all / unq all: 1273 3094 / 1353 3252
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -7 -9 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-10-10 2023-10-24]

2023-10-24T00:57:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6620878595 # 2015
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-24
* notice: last 14d: unq all: 53 156
* notice: prev accum: outdated-unq outdated-all / unq all: 1266 3085 / 1351 3250
* notice: next accum: outdated-unq outdated-all / unq all: 1273 3094 / 1351 3250
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-09] / []

2023-10-23T16:16:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6616038412 # 2014
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-23
* notice: last 14d: unq all: 54 158
* notice: prev accum: outdated-unq outdated-all / unq all: 1266 3085 / 1348 3247
* notice: next accum: outdated-unq outdated-all / unq all: 1266 3085 / 1351 3250
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -6 -7 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [] / [2023-10-09 2023-10-23]

2023-10-22T16:15:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6604884981 # 2011