@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-24T08:16:44Z",
+  "timestamp" : "2023-10-24T16:16:51Z",
   "count_outdated" : 3094,
   "uniques_outdated" : 1273,
-  "count" : 3252,
+  "count" : 3253,
   "uniques" : 1353,
   "clones" : [
     {
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-10-24T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
