@@ -1,3 +1,12 @@
+2023-10-24T16:16:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6629649151 # 2017
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-24
+* notice: last 14d: unq all: 49 150
+* notice: prev accum: outdated-unq outdated-all / unq all: 1273 3094 / 1353 3252
+* notice: next accum: outdated-unq outdated-all / unq all: 1273 3094 / 1353 3253
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2023-10-24]
+
 2023-10-24T08:16:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6624158459 # 2016
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-24
